// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content renders sign in if the user hasn't signed in 1`] = `
<div>
  Mock SignIn
</div>
`;

exports[`Content renders workout library if the user has signed in 1`] = `
<div>
  Mock WorkoutLibrary
</div>
`;
